--- a/python_exam/python_exam.ipynb
+++ b/python_exam/python_exam.ipynb
@@ -67,6 +67,9 @@
    ],
    "source": [
     "def reverse_dict(d):\n",
+    "    ''' \n",
+    "    This function takes a dictionary 'd' as argument and returns the corresponding reverse dictionary\n",
+    "    '''\n",
     "    new_keys = set([item for sublist in list(d.values()) for item in sublist])\n",
     "    return {k: [item[0] for item in list(d.items()) if item[1].count(k) >= 1] for k in new_keys}\n",
     "\n",
